--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,41 @@
     <title>WWM Helper</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Basic SEO -->
+    <meta
+      name="description"
+      content="Unofficial helper for Where Winds Meet — track daily/weekly checklists, timers, and world events in a lightweight web app."
+    />
+    <link rel="canonical" href="https://besaids.github.io/WWM-Helper/" />
+
+    <!-- Theming -->
+    <meta name="theme-color" content="#05070b" />
+    <meta name="color-scheme" content="dark" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="WWM Helper" />
+    <meta property="og:title" content="WWM Helper" />
+    <meta
+      property="og:description"
+      content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
+    />
+    <meta property="og:url" content="https://besaids.github.io/WWM-Helper/" />
+    <meta property="og:image" content="/assets/portal/wwm-logo.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="WWM Helper" />
+    <meta
+      name="twitter:description"
+      content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
+    />
+    <meta name="twitter:image" content="/assets/portal/wwm-logo.png" />
+
+    <!-- Icons -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" href="/assets/portal/wwm-logo.png" />
   </head>
   <body>
     <app-root></app-root>
