--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>WWM Helper</title>
+
+    <!-- Important for GitHub Pages project site -->
     <base href="/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Basic SEO -->
@@ -26,7 +29,10 @@
       content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
     />
     <meta property="og:url" content="https://besaids.github.io/WWM-Helper/" />
-    <meta property="og:image" content="/assets/portal/wwm-logo.png" />
+    <meta
+      property="og:image"
+      content="https://besaids.github.io/WWM-Helper/assets/portal/wwm-logo.png"
+    />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -35,11 +41,14 @@
       name="twitter:description"
       content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
     />
-    <meta name="twitter:image" content="/assets/portal/wwm-logo.png" />
+    <meta
+      name="twitter:image"
+      content="https://besaids.github.io/WWM-Helper/assets/portal/wwm-logo.png"
+    />
 
     <!-- Icons -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" href="/assets/portal/wwm-logo.png" />
+    <link rel="apple-touch-icon" href="assets/portal/wwm-logo.png" />
   </head>
   <body>
     <app-root></app-root>
