Added Path Season Guide and a few refinments

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,17 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="assets/portal/wwm-logo.png" />
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTMKXJ3JCQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-VTMKXJ3JCQ');
+  </script>
   <body>
     <app-root></app-root>
   </body>
