--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>WWM Helper</title>
 
-    <!-- Important for GitHub Pages project site -->
+    <!-- Page title: include game + core features -->
+    <title>
+      WWM Helper – Where Winds Meet Timers, Checklists, Guides & Tools
+    </title>
+
     <base href="/" />
+
+    <meta name="google-site-verification" content="l5kktcwz-sjTLIDCPSYK4FyKCV3TixaRj_TLK4611vk" />
+
+    <meta name="msvalidate.01" content="BB1E37A4BF080C2602E46C1126085F9F" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Basic SEO -->
     <meta
       name="description"
-      content="Unofficial helper for Where Winds Meet — track daily/weekly checklists, timers, and world events in a lightweight web app."
+      content="WWM Helper is an unofficial companion for Where Winds Meet: track daily and weekly reset timers, events, seasonal path challenges, and manage checklists for dailies, weeklies, season goals and custom tasks, plus a detailed guides and tools."
     />
+
+    <!-- Help Bing/other engines a bit -->
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="keywords"
+      content="Where Winds Meet helper, WWM helper, Where Winds Meet timers, Where Winds Meet daily weekly checklist, Where Winds Meet guides, Where Winds Meet tools"
+    />
+
     <link rel="canonical" href="https://besaids.github.io/WWM-Helper/" />
 
     <!-- Theming -->
@@ -23,10 +38,13 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="WWM Helper" />
-    <meta property="og:title" content="WWM Helper" />
+    <meta
+      property="og:title"
+      content="WWM Helper – Where Winds Meet Timers, Checklists, Trading Guide & Seasonal Path Tracker"
+    />
     <meta
       property="og:description"
-      content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
+      content="Fan-made Where Winds Meet helper: reset timers for events/daily/weekly, daily & weekly & seasonal checklists, Seasonal Path Challenges tracker, guides and tools. Free, no login, runs in your browser."
     />
     <meta property="og:url" content="https://besaids.github.io/WWM-Helper/" />
     <meta
@@ -36,10 +54,13 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="WWM Helper" />
+    <meta
+      name="twitter:title"
+      content="WWM Helper – Where Winds Meet Timers, Checklists, Guides and Tools"
+    />
     <meta
       name="twitter:description"
-      content="Track Where Winds Meet timers, resets, and daily/weekly checklists — all in your browser."
+      content="Track Where Winds Meet timers, daily/weekly/seasonal checklists, Seasonal Path Challenges, and trading routes in one fan-made helper website."
     />
     <meta
       name="twitter:image"
@@ -50,17 +71,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="assets/portal/wwm-logo.png" />
   </head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTMKXJ3JCQ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'G-VTMKXJ3JCQ');
-  </script>
   <body>
     <app-root></app-root>
   </body>
