hide music player

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8" />
 
     <!-- Page title: include game + core features -->
-    <title>
-      WWM Helper – Where Winds Meet Timers, Checklists, Guides & Tools
-    </title>
+    <title>WWM Helper – Where Winds Meet Timers, Checklists, Guides & Tools</title>
 
     <base href="/" />
 
